# esp32_laser_tracker

./: .gitignore  CMakeLists.txt  README.md  custom_config.cfg  partitions.csv  sdkconfig
custom_components/iot_servo/: iot_servo.cpp
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  laser_face_tracker.cpp
main/wrappers/camera/: camera.cpp  camera.h
main/wrappers/sd/: sd.cpp  sd.h  write_to_sd.cpp
main/wrappers/server/: server.cpp  server.h
main/wrappers/servo/: servo.cpp  servo.h
main/wrappers/wifi/: wifi.cpp  wifi.h
